[package]
name = "kvdb"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <jnieve@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.0.1"
configure = "0.1.1"
env_logger = "0.6.0"
failure = "0.1.3"
lachesis-rs = { path = "../lachesis-rs" }
ring = "0.13.4"
serde = "1.0.80"
serde_derive = "1.0.80"
