[package]
name = "lachesis-rs"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <agustin@auvik.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.0"
bincode = "1.0.1"
failure = "0.1.3"
log = "0.4"
proptest = "0.8.7"
rand = "0.6.0"
ring = "0.13.4"

untrusted = "0.6.2"
env_logger = "0.6.0"
actix = "0.7.9"
actix-web = "0.7.18"
tokio-io = "*"
tokio-tcp = "*"
byteorder = "*"
bytes = "*"
serde_json = "*"
serde = "1.0.80"
serde_derive = "1.0.80"
futures = "*"
json = "*"